# api_building

./: Cargo.toml  README.md
migrations/2024-03-09-193118_create_books/: up.sql
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  routes.rs  static_files.rs
